# libbluray-android

./: .gitmodules  README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/io/github/peerless2012/bluray/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/io/github/peerless2012/bluray/: MainActivity.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
lib_bluray/: build.gradle.kts
lib_bluray/src/androidTest/java/io/github/peerless2012/bluray/: ExampleInstrumentedTest.kt
lib_bluray/src/main/cpp/: CMakeLists.txt
lib_bluray/src/test/java/io/github/peerless2012/bluray/: ExampleUnitTest.kt
lib_bluray_kt/: build.gradle.kts
lib_bluray_kt/src/androidTest/java/io/github/peerless2012/bluray/kt/: ExampleInstrumentedTest.kt
lib_bluray_kt/src/main/cpp/: CMakeLists.txt
lib_bluray_kt/src/main/java/io/github/peerless2012/bluray/: Bluray.kt
lib_bluray_kt/src/test/java/io/github/peerless2012/bluray/kt/: ExampleUnitTest.kt
lib_bluray_media/: build.gradle.kts
lib_bluray_media/src/androidTest/java/io/github/peerless2012/bluray/media/: ExampleInstrumentedTest.kt
lib_bluray_media/src/main/java/io/github/peerless2012/bluray/media/: BlurayExtractor.kt
lib_bluray_media/src/test/java/io/github/peerless2012/bluray/media/: ExampleUnitTest.kt
